Classwork beginning testing with Teaspoon

--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -3,3 +3,17 @@
 <div class="new-idea"></div>
 
 <div class="ideas"></div>
+
+<div class="ideas">
+  <div class="idea">
+    <h3> New Idea </h3>
+  </div>
+  <div class="idea">
+    <h3> Existing Idea </h3>
+  </div>
+  <div class="idea old">
+    <h3> Old Idea </h3>
+  </div>
+</div>
+
+<button class="hide-old">Hide Old Ideas</button>
